test/libsolidity/syntaxTests/receiveEther/arguments.sol
contract C {
    ether(uint256) external payable {}
}
// ----
// TypeError: (22-31): Receive ether function cannot take parameters.
